<resources>
    <string name="app_name">عابر مقدم الخدمة</string>
    <string name="gallery">المعرض</string>
    <string name="camera">كاميرا</string>
    <string name="design_program">Design and programming</string>
    <string name="call_grand">Contact</string>
    <string name="whats">What\'s app</string>
    <string name="call">اتصال</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_image_from">إختر صورتك</string>
    <string name="select_file">إختر</string>
    <string name="connection_invaild_body">Check your Internet connection and try again</string>
    <string name="connection_On">Please turn on</string>
    <string name="connection_Wifi">Wifi</string>
    <string name="connection_Data">Mobile data</string>
    <string name="connection_AirPlane">You have turned on the airplane mode.</string>
    <string name="connection_AirPlane_TurnOff">Please turn off</string>
    <string name="connection_AirPlane_Mode">Airplane mode</string>
    <string name="connection_invaild_msg">Poor Internet Connection</string>
    <string name="please_select_another_file">Please select another file</string>
    <string name="google_map">AIzaSyAG9F2HDaTi93fzTTB0vdj5G0Ol6ys2SgQ</string>
    <string name="email_hint">البريد الالكترونى</string>
    <string name="email"> البريد الإلكترونى</string>
    <string name="password">كلمة المرور</string>
    <string name="login">تسجيل الدخول</string>
    <string name="phone">من فضلك ادخل رقم الجوال او البريد الاكتروني</string>
    <string name="invalidEmail">بريد الكترونى خاطئ,  Taa@example.com</string>
    <string name="invalidPassword">كلمة المرور ضعيفه على الاقل 8 حروف وارقام</string>
    <string name="invalidPhone">Invalid phone</string>
    <string name="fieldRequired">هذا الحقل مطلوب</string>
    <string name="next">التالي</string>
    <string name="startApp">بدأ التطبيق</string>
    <string name="select_country">أخرون</string>
    <string name="country_next">التالى</string>
    <string name="login_header">تسجيل الدخول</string>
    <string name="login_phone">رقم الجوال / البريد الالكتروني</string>
    <string name="login_header_number"> رقم الجوال</string>
    <string name="login_forget">نسيت كلمة المرور ؟</string>
    <string name="forget_header">نسيت كلمة المرور</string>
    <string name="confirm_header">كود استرجاع كلمة المرور</string>
    <string name="confirm_account">تفعيل الحساب</string>
    <string name="forget_remember">تذكرت كلمة المرور</string>
    <string name="send">إرسال</string>
    <string name="confirm_header_text">سيتم ارسال كود التفعيل علي الهاتف الخاص بك برجاء ادخال الكود</string>
    <string name="confirm_header_text_forget">من فضلك قم بكتابه الكود</string>
    <string name="confirm">تأكيد</string>
    <string name="confirm_resend">إعادة إرسال</string>
    <string name="change_header">إنشاء كلمة مرور جديدة</string>
    <string name="change_header_text">من فضلك قم بكتابة كلمة مرور جديدة</string>
    <string name="change_new_password">كلمة المرور الجديدة</string>
    <string name="change_confirm_password">تأكيد كلمة المرور</string>
    <string name="password_hint">قم بإدخال كلمة المرور</string>
    <string name="register_header">إنشاء حساب جديد</string>
    <string name="register_name">الاسم </string>
    <string name="name_hint">من فضلك قم بكتابة اسمك</string>
    <string name="register_phone">رقم الجوال </string>
    <string name="register_password">كلمة المرور *</string>
    <string name="register">إنشاء حساب</string>
    <string name="have_account"> لدي حساب بالفعل؟</string>
    <string name="register_last_name">الاسم الثاني *</string>
    <string name="floor">الكل</string>
    <string name="building_number">رقم بطاقة الهوية</string>
    <string name="identity_number_hint">من فضلك قم بإدخال رقم الهوية الوطنية</string>
    <string name="service_cost">تكلفة الخدمات</string>
    <string name="register_city_hint">  المدينة</string>
    <string name="street">اسم الشارع</string>
    <string name="add">من فضلك قم باختيار نوع الهوية</string>
    <string name="wallet_balance">رصيد المحفظة</string>
    <string name="put_wallet_balance">من فضلك قم باختيار نوع المركبة</string>
    <string name="charge_app_wallet_btn_text">لوحة المركبة</string>
    <string name="commercial_hint">الحروف</string>
    <string name="tax_card">الأرقام</string>
    <string name="passport_image">صورة أمامية للمركبة</string>
    <string name="car_front_image_hint">إرفاق صورة المركبة</string>
    <string name="car_back_image">صورة خلفية للمركبة</string>
    <string name="insurance_image">صورة التأمين</string>
    <string name="insurance_image_hint">إرفاق صورة التأمين</string>
    <string name="license_image">صورة التراخيص</string>
    <string name="license_image_hint">إرفاق ملكية السيارة</string>
    <string name="license_civil_image">صورة رخصة القيادة</string>
    <string name="subscribe">إرفاق صورة رخصة القيادة</string>
    <string name="bank_name_account">اسم صاحب الحساب</string>
    <string name="bank_number_account">رقم حساب البنك</string>
    <string name="block">حظر</string>
    <string name="document">تحميل المستند</string>
    <string name="menuHome">الرئيسية</string>
    <string name="menuFollowers">المتابعين</string>
    <string name="menuCategories">المزيد</string>
    <string name="menuFavorite">بث مباشر</string>
    <string name="menuCart">حسابي</string>
    <string name="wawo">&#160; و &#160;</string>
    <string name="menu_account">طلبات التوصيل</string>
    <string name="menu_previous_orders">طلبات المتاجر</string>
    <string name="social_media">"مسافة الطلب : "</string>
    <string name="aval_order_time">"اسم العميل : "</string>
    <string name="reacts_people">الأشخاص المتفاعلون</string>
    <string name="account_questions">الاسئلة</string>
    <string name="account_answers">الاجابات</string>
    <string name="points">نقاطي</string>
    <string name="account_profile">الحساب</string>
    <string name="delivery_vat_total_text">إجمالى رسوم التوصيل</string>
    <string name="tv_account_billing_total_text">إجمالى الفواتير المدفوعة</string>
    <string name="tv_account_order_num_text">عدد الطلبات</string>
    <string name="tv_account_num_comments_text">تعليقات المستحدمين</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="choose_time_title">تحديد وقت الخدمة</string>
    <string name="request_upgrade_btn">طلب ترقية حسابي</string>
    <string name="profile">الصفحة الشخصية</string>
    <string name="terms">الشروط والأحكام</string>
    <string name="rate">قيم التطبيق</string>
    <string name="about">عن التطبيق</string>
    <string name="free_hours">عدد ساعات التفرغ في اليوم</string>
    <string name="tv_account_warning1">لا يمكن تعديل البيانات الشخصية إلا من قبل الأدمن الرئيسي</string>
    <string name="tv_account_warning2">يمكن تعديل كلمة المرور فقط</string>
    <string name="password_hint_confirm">تأكيد كلمة المرور الجديدة</string>
    <string name="edit">تعديل </string>
    <string name="privacy">سياسة الخصوصية</string>
    <string name="message_hint">اترك رسالتك هنا</string>
    <string name="about_title">تطبيق أمرك</string>
    <string name="certificates">الشهادات والدورات التدريبية</string>
    <string name="tv_points_header">رصيد حسابك الحالي</string>
    <string name="point">نقطة</string>
    <string name="point_warning1">يمكنمك استبدال نقاطك بمبالغ مالية</string>
    <string name="point_warning2">رصيد حسابك الحالي يمكن استبداله ب</string>
    <string name="points_btn">استبدال نقاطي</string>
    <string name="total_points">اجمالى النقاط المتبقية</string>
    <string name="tv_sizes">الحجم</string>
    <string name="tv_colors">الالوان</string>
    <string name="instructor_name"> اسم المحاضر</string>
    <string name="order_on_way">جاري التوصيل</string>
    <string name="new_review">إضافة تقييم</string>
    <string name="order_shipped">تم الشحن</string>
    <string name="my_wallet">محفظتى</string>
    <string name="new_live_title">أضف عنوان للبث</string>
    <string name="service_desc">أضف وصف للبث</string>
    <string name="market_delegate_count">عدد المناديب</string>
    <string name="be_delegate">سجلني كمندوب</string>
    <string name="section">القسم التعليمي </string>
    <string name="detect">تحديد</string>
    <string name="choose_live_time">اختيار الوقت</string>
    <string name="live_promo_video">أضف برومو فيديو</string>
    <string name="report_btn">ابلاغ</string>
    <string name="order_delivered_location">موقع استلام الشحنة</string>
    <string name="order_locations">3 شارع هاشم الشقر , مدينة نصر , القاهرة</string>
    <string name="order_delivery_location">موقع تسليم الشحنة</string>
    <string name="send_order">أنا مستعد أوصل هذا الطلب</string>
    <string name="sort">ترتيب</string>
    <string name="select_photo_text">إختر الصور</string>
    <string name="delivery_cost_send">إرسال عرض سعر للتوصيل</string>
    <string name="chat_hint">إكتب رسالتك هنا</string>
    <string name="msg_server_error">حدث خطأ ما يرجى المحاوله فى وقت اخر</string>
    <string name="password_not_match">كلمة المرور غير مطابقة</string>
    <string name="select_image_profile"> يرجى إختيار الصورةالشخصية</string>
    <string name="attach_hint">أرفق صورة او فيديو</string>
    <string name="add_post_btn">إضافة</string>
    <string name="empty_posts">لا يوجد منشورات يرجى الضغط علي + لاضافة المزيد</string>
    <string name="empty_live">لا يوجد بث يرجى الضغط علي + لاضافة المزيد</string>
    <string name="emergency_services">خدمة طارئة الأن</string>
    <string name="civil_car_add">لقد تم اختيار صورة القياده بنجاح</string>
    <string name="delegate">" " مندوب</string>
    <string name="order">" " طلب</string>
    <string name="comment">" " تعليق</string>
    <string name="market">المتجر</string>
    <string name="follow_questions">متابعة الاسئلة</string>
    <string name="market_location_url">http%3A%2F%2Ftakeme.my-staff.net%2Fpublic%2Fmarket_location.png</string>
    <string name="driver_location_url">http%3A%2F%2Ftakeme.my-staff.net%2Fpublic%2Fdriver_location.png</string>
    <string name="tv_account_contact">اتصل بنا</string>
    <string name="empty_warning">يجب ملئ جميع البيانات</string>
    <string name="dialog_upload_docs">رفع المستندات</string>
    <string name="doc_dialog_desc">من فضلك قم برفع الملفات المطلوبة حتي تتمنكن من استخدام التطبيق</string>
    <string name="requested_dialog_title">تحميل المستندات</string>
    <string name="client_name">أراء العملاء</string>
    <string name="less_order_offer">أقل من " "</string>
    <string name="live_date">وقت البث</string>
    <string name="send_offer_warning">يرجى إرسال عرض اقل من القيمه السابقه " "</string>
    <string name="send_offer_warning_waiting">لقد تم ارسال عرض من قبل </string>
    <string name="report">إبلاغ</string>
    <string name="replies">الردود</string>
    <string name="search">بحث</string>
    <string name="delivered_chat_options">تم تسليم الشحنة</string>
    <string name="subscribe_live">اشترك في البث</string>
    <string name="confirm_chat_options">طلب تأكيد من العميل</string>
    <string name="cancel">إلغاء</string>
    <string name="image_selected">تم اختيار الصورة بنجاح ,اضغط للارسال</string>
    <string name="on_way">في الطريق</string>
    <string name="follow_market_line_on_way_to_get_order">في الطريق لإستلام الشحنة</string>
    <string name="market_order_processing">في الطريق إلي مكان المعالجة</string>
    <string name="market_order_done_processing">تمت المعالجة</string>
    <string name="follow_on_way">في الطريق إلي تسليم الشحنة</string>
    <string name="follow_provider">تتبع مقدم الخدمة</string>
    <string name="subscrubtions">عناويني</string>
    <string name="country">الدولة</string>
    <string name="my_services">الخدمات المطلوبة</string>
    <string name="lang">اللغة</string>
    <string name="change_lang">تغيير اللغة</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="notifications">الإشعارات</string>
    <string name="more">المزيد</string>
</resources>