<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="grand.app.moon.views.fragments.SplashFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="grand.app.aber_provider.pages.settings.viewModels.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_base_ground">


        <grand.app.aber_provider.customViews.views.CustomTextViewMedium
            android:id="@+id/tv_take_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp13w"
            android:layout_marginTop="@dimen/dp15h"
            android:text="@string/change_lang"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colordark"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp12h"
            android:onCheckedChanged="@{viewmodel.onLangChange}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_take_me">

            <RadioButton
                android:id="@+id/english"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:checked="@{viewmodel.lang.equals(`en`)?true:false}"
                android:text="@string/english"
                android:textAlignment="viewStart" />

            <RadioButton
                android:id="@+id/arabic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp8h"
                android:background="@color/white"
                android:checked="@{viewmodel.lang.equals(`ar`)?true:false}"
                android:text="@string/arabic"
                android:textAlignment="viewStart" />

            <RadioButton
                android:id="@+id/urdu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp8h"
                android:background="@color/white"
                android:checked="@{viewmodel.lang.equals(`ur`)?true:false}"
                android:text="@string/urdu"
                android:textAlignment="viewStart" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp12w"
            android:layout_marginEnd="@dimen/dp12w"
            android:layout_marginBottom="@dimen/dp20h"
            android:background="@drawable/corner_view_gradient"
            android:onClick="@{()-> viewmodel.changeLang()}"
            android:text="@string/edit"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>