<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="grand.app.aber_provider.utils.Constants" />

        <variable
            name="menuViewModel"
            type="grand.app.aber_provider.customViews.views.MenuViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/side_menu">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <grand.app.aber_provider.customViews.views.CustomTextViewMedium
                android:id="@+id/tv_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp20h"
                android:layout_marginEnd="@dimen/dp120w"
                android:drawableStart="@drawable/ic_home"
                android:drawablePadding="@dimen/dp8w"
                android:gravity="center_vertical|start"
                android:text="@string/menuHome"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/v1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp10h"
                android:background="@color/line_color"
                app:layout_constraintEnd_toEndOf="@id/rc_menu_social"
                app:layout_constraintTop_toBottomOf="@id/tv_home" />

            <grand.app.aber_provider.customViews.views.CustomTextViewMedium
                android:id="@+id/tv_my_services"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp20h"
                android:layout_marginEnd="@dimen/dp120w"
                android:drawableStart="@drawable/ic_my_orders"
                android:drawablePadding="@dimen/dp8w"
                android:gravity="center_vertical|start"
                android:text="@string/my_services"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                app:drawableTint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/v1" />

            <View
                android:id="@+id/v5"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp10h"
                android:background="@color/line_color"
                app:layout_constraintEnd_toEndOf="@id/rc_menu_social"
                app:layout_constraintTop_toBottomOf="@id/tv_my_services" />

            <grand.app.aber_provider.customViews.views.CustomTextViewMedium
                android:id="@+id/tv_provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp20h"
                android:layout_marginEnd="@dimen/dp120w"
                android:drawableStart="@drawable/ic_my_previous_orders"
                android:drawablePadding="@dimen/dp8w"
                android:gravity="center_vertical|start"
                android:text="@string/menu_previous_orders"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                app:drawableTint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/v5" />

            <View
                android:id="@+id/v7"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp10h"
                android:background="@color/line_color"
                app:layout_constraintEnd_toEndOf="@id/rc_menu_social"
                app:layout_constraintTop_toBottomOf="@id/tv_provider" />

            <grand.app.aber_provider.customViews.views.CustomTextViewMedium
                android:id="@+id/tv_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp20h"
                android:layout_marginEnd="@dimen/dp120w"
                android:drawableStart="@drawable/ic_notifications"
                android:drawablePadding="@dimen/dp8w"
                android:gravity="center_vertical|start"
                android:text="@string/notifications"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/v7" />

            <View
                android:id="@+id/v8"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp10h"
                android:background="@color/line_color"
                app:layout_constraintEnd_toEndOf="@id/rc_menu_social"
                app:layout_constraintTop_toBottomOf="@id/tv_notifications" />

            <grand.app.aber_provider.customViews.views.CustomTextViewMedium
                android:id="@+id/tv_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp20h"
                android:layout_marginEnd="@dimen/dp120w"
                android:drawableStart="@drawable/account_circle"
                android:drawablePadding="@dimen/dp8w"
                android:gravity="center_vertical|start"
                android:onClick="@{()-> menuViewModel.liveDataActions(Constants.MENU_ACCOUNT)}"
                android:text="@string/menu_account"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/v8" />

            <View
                android:id="@+id/v9"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp10h"
                android:background="@color/line_color"
                app:layout_constraintEnd_toEndOf="@id/rc_menu_social"
                app:layout_constraintTop_toBottomOf="@id/tv_privacy" />


            <grand.app.aber_provider.customViews.views.CustomTextViewMedium
                android:id="@+id/tv_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp20h"
                android:layout_marginEnd="@dimen/dp120w"
                android:drawableStart="@drawable/ic_translate"
                android:drawablePadding="@dimen/dp8w"
                android:gravity="center_vertical|start"
                android:text="@string/lang"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                app:drawableTint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/v9" />

            <View
                android:id="@+id/v16"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp10h"
                android:background="@color/line_color"
                app:layout_constraintEnd_toEndOf="@id/rc_menu_social"
                app:layout_constraintTop_toBottomOf="@id/tv_lang" />

            <grand.app.aber_provider.customViews.views.CustomTextViewMedium
                android:id="@+id/tv_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp20h"
                android:layout_marginEnd="@dimen/dp120w"
                android:drawableStart="@drawable/ic_flag"
                android:drawablePadding="@dimen/dp8w"
                android:gravity="center_vertical|start"
                android:text="@string/country"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                app:drawableTint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/v16" />

            <View
                android:id="@+id/v17"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp10h"
                android:background="@color/line_color"
                app:layout_constraintEnd_toEndOf="@id/rc_menu_social"
                app:layout_constraintTop_toBottomOf="@id/tv_country" />

            <grand.app.aber_provider.customViews.views.CustomTextViewMedium
                android:id="@+id/tv_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp20h"
                android:layout_marginEnd="@dimen/dp120w"
                android:drawableStart="@drawable/ic_town"
                android:drawablePadding="@dimen/dp8w"
                android:gravity="center_vertical|start"
                android:text="@string/register_city_hint"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                app:drawableTint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/v17" />

            <View
                android:id="@+id/v15"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp10h"
                android:background="@color/line_color"
                app:layout_constraintEnd_toEndOf="@id/rc_menu_social"
                app:layout_constraintTop_toBottomOf="@id/tv_city" />

            <grand.app.aber_provider.customViews.views.CustomTextViewMedium
                android:id="@+id/tv_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp20h"
                android:layout_marginEnd="@dimen/dp120w"
                android:drawableStart="@drawable/ic_more"
                android:drawablePadding="@dimen/dp8w"
                android:gravity="center_vertical|start"
                android:onClick="@{()-> menuViewModel.liveDataActions(Constants.MORE)}"
                android:text="@string/more"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                app:drawableTint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/v15" />

            <View
                android:id="@+id/v20"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp10h"
                android:background="@color/line_color"
                app:layout_constraintEnd_toEndOf="@id/rc_menu_social"
                app:layout_constraintTop_toBottomOf="@id/tv_more" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_menu_social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp20h"
                android:layout_marginEnd="@dimen/dp120w"
                android:layout_marginBottom="@dimen/dp20h"
                android:orientation="horizontal"
                app:adapter="@{menuViewModel.socialAdapter}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/v20"
                app:orientation="@{`2`}"
                app:span="@{`1`}" />

            <grand.app.aber_provider.customViews.grandDialog.GrandImageDialog
                android:id="@+id/grand_logo"
                android:layout_width="@dimen/dp80w"
                android:layout_height="@dimen/dp20h"
                android:layout_margin="@dimen/dp10h"
                android:scaleType="fitXY"
                android:src="@drawable/by_grand"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/rc_menu_social"
                app:layout_constraintStart_toStartOf="@id/rc_menu_social"
                app:layout_constraintTop_toBottomOf="@id/rc_menu_social"
                app:tint="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>